tests/ui/c-variadic/issue-86053-2.stderr
error[E0491]: in type `&'static &'a ()`, reference has a longer lifetime than the data it references
  --> $DIR/issue-86053-2.rs:8:39
   |
LL | unsafe extern "C" fn ordering4<'a, F: H<&'static &'a ()>>(_: (), ...) {}
   |                                       ^^^^^^^^^^^^^^^^^^
   |
   = note: the pointer is valid for the static lifetime
note: but the referenced data is only valid for the lifetime `'a` as defined here
  --> $DIR/issue-86053-2.rs:8:32
   |
LL | unsafe extern "C" fn ordering4<'a, F: H<&'static &'a ()>>(_: (), ...) {}
   |                                ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0491`.
